# GYT

./: .gitignore  GYT-Yash_Macbook.pem  README.md  Taskfile.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  fly.toml  pyproject.toml  requirements.txt
backend/gyt_venv/: pyvenv.cfg
backend/src/app/: app.py  config.py
backend/src/app/models/: execute_trade_request_body.py
backend/src/app/service/: zerodha_kite_service.py
frontend/gyt-app/: package-lock.json  package.json  tsconfig.json
frontend/gyt-app/src/: App.tsx
frontend/gyt-app/src/components/: landingPage.tsx
frontend/gyt-app/src/pages/Dashboard/: dashboard.tsx
frontend/gyt-app/src/pages/Home/: home.tsx  landingPage.tsx
frontend/gyt-app/src/services/: tradeService.tsx
src/app/: __init__.py  app.py  routes.py
src/app/service/: zerodha_kite_service.py
