[build-system]
# Build time requirements
requires = [
  "pip-tools==6.13.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "micro-investing-app"
version = "0.0.1"
description = "Micro-investing UPI payment app"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "flask==3.1.0",
]

[project.optional-dependencies]
# Optional dependencies for development and testing
dev = [
  "black==23.7.0",
  "isort==5.12.0",
  "pytest==7.3.1",
  "pytest-cov==4.0.0"
]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s (%(filename)s:%(lineno)s)] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
